# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  catalog.json
.claude/skills/cerebras/: SKILL.md
.playwright-mcp/: page-2026-05-14T21-27-26-517Z.yml  page-2026-05-16T11-10-48-719Z.yml  page-2026-05-16T11-10-56-520Z.yml  page-2026-05-16T11-11-28-296Z.yml
backend/: pyproject.toml
backend/src/prelegal/: auth.py  db.py  deps.py  documents.py  llm.py  main.py  templates.py
backend/src/prelegal/routers/: auth.py  catalog.py  chat.py  documents.py  my_documents.py
backend/tests/: conftest.py  test_auth.py  test_catalog.py  test_chat.py  test_documents.py  test_my_documents.py  test_smoke.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: AuthGate.tsx  ChatPane.tsx  DisclaimerBanner.tsx  DocumentPreview.tsx  DocumentsSidebar.tsx  LoginGate.tsx  MndaForm.tsx  MndaPreview.tsx  PlaceholderText.tsx  Wordmark.tsx
frontend/src/lib/: api.ts  auth.ts  chat.ts  documents.ts  mnda-standard-terms.ts  mnda.ts  myDocuments.ts  session.ts
scripts/: start-mac.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
templates/: LICENSE.txt
