[project]
name = "prelegal"
version = "0.1.0"
description = "Prelegal V1 backend — FastAPI app serving the foundation API and the statically-exported frontend."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "litellm>=1.84.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prelegal"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
